[package]
name = "ratin"
version = "0.1.2"
edition = "2024"
description = "Custom input field component for Ratatui TUI applications"
license = "MIT"
repository = "https://github.com/Fkernel653/ratin"
documentation = "https://docs.rs/ratin"
readme = "README.md"
keywords = ["ratatui", "tui", "input", "terminal", "ui"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
